# learn-haskell

./: .gitignore  AdvancedData.hs  ChangeLog.md  Curry.hs  Data.hs  LICENSE  List.hs  Main.hs  Test.hs  cabal.sandbox.config  learn-haskell.cabal
.cabal-sandbox/x86_64-osx-ghc-8.0.1-packages.conf.d/: package.cache
CIS194/: README.md  Typeclassopedia.hs  my-project.cabal  stack.yaml  styleGuide.md
CIS194/finalProjext/: readme.md
CIS194/src/: JoinList.hs  Scrabble.hs
CIS194/week1/: homework.hs  lyah.hs  moli.hs  quux.txt  realworld.hs
CIS194/week10/: AParser.hs  Main.hs  noteOnApplicative.md
CIS194/week11/: Main.hs  SExpr.hs
CIS194/week12/: Main.hs  Risk.hs
CIS194/week2/: LogAnalysis.hs  ch2.hs  moli.hs  note.md
CIS194/week3/: Golf.hs  ch3.hs
CIS194/week4/: Church.hs  Homework.hs  ch4.hs
CIS194/week5/: Excercise6.hs  Expr.hs  ExprParser.hs  Main.hs
CIS194/week6/: Fold.lhs  Main.hs  Realworld.hi  Realworld.hs
CIS194/week7/: Editor.hs  FingerTree.hs  JoinList.hs  JoinListBuffer.hs  Main.hs  Monoid.hs  Sized.hs  StringBuffer.hs  carol.txt
CIS194/week8/: Employee.hs  LYAHK.hs  Main.hs  Party.hs
Data61/: Data61.cabal  README.md  note.md
Data61/app/: Main.hs
Data61/src/: Anagrams.hs  Applicative.hs  Cheque.hs  Comonad.hs  Compose.hs  Core.hs  Course.hs  Extend.hs  FastAnagrams.hs  FileIO.hs  Functor.hs  Id.hs  Interactive.hs  JsonParser.hs  JsonValue.hs  List.hs  ListZipper.hs  Monad.hs  MonadTutorial.hs  MoreParser.hs  Optional.hs  Parser.hs  Person.hs  State.hs  StateT.hs  (+3 more)
note/: Functor.md  Lens.md  newType.md  单位半群.md  应用函子.md  范畴.md  语法.md
(+5 files in other folders)
